test_regress/t/t_split_var_1_bad.out
%Warning-SPLITVAR: t/t_split_var_1_bad.v:7:13: 'should_show_warning_global0' has split_var metacomment, but will not be split because it is not declared in a module.
    7 | logic [7:0] should_show_warning_global0  /*verilator split_var*/;
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~
                   ... For warning description see https://verilator.org/warn/SPLITVAR?v=latest
                   ... Use "/* verilator lint_off SPLITVAR */" and lint_on around source to disable this message.
%Warning-SPLITVAR: t/t_split_var_1_bad.v:8:13: 'should_show_warning_global1' has split_var metacomment, but will not be split because it is not declared in a module.
    8 | logic [7:0] should_show_warning_global1[1:0]  /*verilator split_var*/;
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:11:15: 'should_show_warning_ifs0' has split_var metacomment, but will not be split because it is not declared in a module.
   11 |   logic [7:0] should_show_warning_ifs0  /*verilator split_var*/;
      |               ^~~~~~~~~~~~~~~~~~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:12:15: 'should_show_warning_ifs1' has split_var metacomment, but will not be split because it is not declared in a module.
   12 |   logic [7:0] should_show_warning_ifs1[1:0]  /*verilator split_var*/;
      |               ^~~~~~~~~~~~~~~~~~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:46:12: 'cannot_split1' has split_var metacomment but will not be split because it is accessed from another module via a dot.
   46 |     i_sub0.cannot_split1[0] = 0;
      |            ^~~~~~~~~~~~~
%Warning-SELRANGE: t/t_split_var_1_bad.v:101:32: Selection index out of range: 13 outside 12:10
                                               : ... note: In instance 't.i_sub3'
  101 |   assign outwires[12] = inwires[13];   
      |                                ^
                   ... For warning description see https://verilator.org/warn/SELRANGE?v=latest
                   ... Use "/* verilator lint_off SELRANGE */" and lint_on around source to disable this message.
%Warning-WIDTHTRUNC: t/t_split_var_1_bad.v:47:29: Operator ASSIGN expects 8 bits on the Assign RHS, but Assign RHS's FUNCREF 'bad_func' generates 32 bits.
                                                : ... note: In instance 't'
   47 |     i_sub0.cannot_split1[1] = bad_func(addr, rd_data0);
      |                             ^
                     ... For warning description see https://verilator.org/warn/WIDTHTRUNC?v=latest
                     ... Use "/* verilator lint_off WIDTHTRUNC */" and lint_on around source to disable this message.
%Error: t/t_split_var_1_bad.v:90:15: Illegal assignment of constant to unpacked array
                                   : ... note: In instance 't.i_sub2'
   90 |   assign b = a[0];   
      |               ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Warning-SPLITVAR: t/t_split_var_1_bad.v:64:39: 'cannot_split0' has split_var metacomment but will not be split because index cannot be determined statically.
                                              : ... note: In instance 't.i_sub0'
   64 |   always_comb rd_data = cannot_split0[addr];
      |                                       ^~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:101:33: 'inwires' has split_var metacomment but will not be split because index is out of range.
                                               : ... note: In instance 't.i_sub3'
  101 |   assign outwires[12] = inwires[13];   
      |                                 ^~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:17:8: 'should_show_warning0' has split_var metacomment but will not be split because it is not an aggregate type of bit nor logic.
                                             : ... note: In instance 't'
   17 |   real should_show_warning0  /*verilator split_var*/;
      |        ^~~~~~~~~~~~~~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:18:10: 'should_show_warning1' has split_var metacomment but will not be split because it is not an aggregate type of bit nor logic.
                                              : ... note: In instance 't'
   18 |   string should_show_warning1  /*verilator split_var*/;
      |          ^~~~~~~~~~~~~~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:19:8: 'should_show_warning2' has split_var metacomment but will not be split because its bitwidth is 1.
                                             : ... note: In instance 't'
   19 |   wire should_show_warning2  /*verilator split_var*/;
      |        ^~~~~~~~~~~~~~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:23:15: 'public_signal' has split_var metacomment but will not be split because it is public.
                                              : ... note: In instance 't'
   23 |   logic [1:0] public_signal  /*verilator public*/  /*verilator split_var*/;
      |               ^~~~~~~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:37:43: 'inout_port' has split_var metacomment but will not be split because it is an inout port.
                                              : ... note: In instance 't'
   37 |   function int bad_func(inout logic [3:0] inout_port  /*verilator split_var*/,
      |                                           ^~~~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:38:41: 'ref_port' has split_var metacomment but will not be split because it is a ref argument.
                                              : ... note: In instance 't'
   38 |                         ref logic [7:0] ref_port  /*verilator split_var*/);
      |                                         ^~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:43:17: 'loop_idx' has split_var metacomment but will not be split because it is used as a loop variable.
                                              : ... note: In instance 't'
   43 |     logic [7:0] loop_idx  /*verilator split_var*/;
      |                 ^~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:73:10: 'cannot_split_genvar' has split_var metacomment but will not be split because it is not an aggregate type of bit nor logic.
                                              : ... note: In instance 't.i_sub1'
   73 |   genvar cannot_split_genvar  /*verilator split_var*/;
      |          ^~~~~~~~~~~~~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:76:70: 'cannot_split' has split_var metacomment but will not be split because its bit range cannot be determined statically.
                                              : ... note: In instance 't.i_sub1'
   76 |     static logic [8:0] rd_tmp  /*verilator split_var*/ = cannot_split[addr];
      |                                                                      ^
%Warning-SPLITVAR: t/t_split_var_1_bad.v:77:21: 'rd_tmp' has split_var metacomment but will not be split because its bit range cannot be determined statically.
                                              : ... note: In instance 't.i_sub1'
   77 |     rd_data = rd_tmp[{3'b0, addr[0]}+:8];
      |                     ^
%Error: Exiting due to
